Add basic txt file reading
The following is now possible:
- choose a local directory
- load all txt files from that directory (including subdirectories)
- view all txt files in a list, where each file is denoted by id (temporary, will remove later), filename, and location
- view individual file's contents
- change directory

App will warn if chosen directory does not exist, show a notification indicating successful saves, and print an error if a txt file's contents fails to render properly.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,21 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
  *= require_tree .
  *= require_self
  */
+
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
+div.alert{
+  margin-left: auto;
+  margin-right: auto;
+  background-color: grey;
+  text-align: center;
+  padding: 5px;
+  border-radius: 20px;
+  /* These styles don't work under when put under p.alert (idk why)
+  so I just put it here to be inherited by all text under div.alert */
+  font-size: 23px;
+  font-family: 'Raleway';
+}
