Add txt file editing, other fixes
Added features:
- ability to edit and save txt file changes to disk
- ability to change file name

Minor changes:
- all styles are now in one scss file, because both User and Textfile views share the same classes
- changed some class names for clarity's sake
- code formatting
- rearranged some html elements

--- a/app/views/textfiles/index.html.erb
+++ b/app/views/textfiles/index.html.erb
@@ -2,12 +2,12 @@
 <% # => will probably mess with data, because it probably does %>
 
 <h1>Home</h1>
+<h4><%= link_to "Change Directory", edit_user_path(User.first) %></h4>
 
 <div class="center">
-  <p class="navigation"><%= link_to "Change Directory", edit_user_path(User.first) %></p>
   <ul id="textfiles">
     <% @textfiles.each do |textfile| %>
-      <li class="content">
+      <li class="main_text">
         <%= textfile.id %>
         <%= link_to (textfile.name + " @ " + textfile.location), textfile_path(textfile) %>
       </li>
