Add tags, adjust minor stuff
Added features:
- Add and remove tags for files
- New files automatically given the tag "New"
- Tag list and file list shown on the same page
- Tag list and file contents shown on the same page
- Unused tags automatically deleted

Code technicality changes:
- Gemfile changed to support tags
- Reorganized POROs
- Made controllers thinner (mostly by moving stuff into POROs)
- Textfile and Tag indexes moved to User show, since they both appear on one page, and I don't know where else to put them
- Other minor fixes

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,5 +1,4 @@
-// The views of User and Textfile have a unified look,
-// so all their styles go here
+// Styles shared between models (i.e. all of them) go here
 
 // @font-face{} didn't work for some reason
 @import url(https://fonts.googleapis.com/css?family=Raleway);
@@ -20,19 +19,43 @@ h4{
 
 ul{
   list-style-type: none;
+  padding: 0;
 }
 
 li{
   margin: 5px;
 }
 
-div.center{
+div.center, div.parent{
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 1000px;
+  overflow: auto;
+  background-color: white;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.main_text, .small_input_box, .large_input_box, .button, p.navigation{
+div.parent{
+  display: flex;
+}
+
+div.left{
+  float: left;
+  width: 60%;
+  padding-right: 10%;
+  align-items: stretch;
+}
+
+div.right{
+  float: right;
+  width: 30%;
+  padding-left: 20px;
+  border-left: ridge;
+  align-items: stretch;
+}
+
+h2, .main_text, .small_input_box, .large_input_box, .button, p.navigation{
   font-family: 'Raleway';
 }
 
