--- a/app/views/textfiles/_form.html.erb
+++ b/app/views/textfiles/_form.html.erb
@@ -5,6 +5,10 @@
       <%= f.text_field :name, class: "small_input_box" %><br>
     </p>
     <p class="main_text">
+      <%= f.label :tag_list, "Tags" %><br>
+      <%= f.text_field :tag_list, value: f.object.tag_list.to_s, class: "small_input_box" %><br>
+    </p>
+    <p class="main_text">
       <%= f.label :contents, "File Contents" %><br>
       <%= f.text_area :contents, rows: 30, class: "large_input_box" %>
     </p>
