--- a/app/views/textfiles/show.html.erb
+++ b/app/views/textfiles/show.html.erb
@@ -1,19 +1,30 @@
 <h1><%= @textfile.name %></h1>
 <h4><%= link_to "Edit File", edit_textfile_path(@textfile) %></h4>
 
-<div class="center">
-  <p class="main_text">
-    <% # Probably will break in Linux, as I think it handles newlines differently %>
-    <% begin %>
-      <% contents_list = @textfile.contents.split("\n") %>
-    <% rescue ArgumentError %>
-      <% #TODO: Convert the file instead of telling the user to fix it %>
-      <% contents_list = ["ERROR: invalid characters found in file.", "",
-        "Ensure that the file is encoded in UTF-8."] %>
-    <% end %>
-    <% contents_list.each do |line| %>
-      <%= line %><br>
-    <% end %>
-  </p>
-  <p class="navigation"><%= link_to "Return to all files", textfiles_path %></p>
+<div class="center, parent">
+
+  <div class="left">
+
+    <% # Works magically because of views/acts_as_taggable_on/tags/_tag.html.erb %>
+    <% # See: github.com/mbleigh/acts-as-taggable-on/wiki/Tutorial-for-Posts %>
+    <p class="main_text"><b>Tags:</b> <%= render @textfile.tags %></p>
+
+    <p class="main_text">
+      <% # Probably will break in Linux, as I think it handles newlines differently %>
+      <% begin %>
+        <% contents_list = @textfile.contents.split("\n") %>
+      <% rescue ArgumentError %>
+        <% contents_list = ["ERROR: invalid characters found in file.", "",
+          "Ensure that the file is encoded in UTF-8."] %>
+      <% end %>
+      <% contents_list.each do |line| %>
+        <%= line %><br>
+      <% end %>
+    </p>
+    <p class="navigation"><%= link_to "Return to all files", user_path(@user) %></p>
+
+  </div>
+
+  <%= render partial: "/shared/tags" %>
+
 </div>
