--- a/app/views/shared/_tags.html.erb
+++ b/app/views/shared/_tags.html.erb
@@ -1,10 +1,9 @@
-<div class="right">
+<div id="right">
   <h2>All Tags</h2>
   <ul>
-    <% @tags.each do |tag| %>
+    <% tags.each do |tag| %>
         <li class="main_text">
-          <%= link_to tag.name, tag_path(tag) %>
-          <%= " (#{tag.taggings_count})" %>
+          <%= link_to(tag.name, tag_path(tag)) %> (<%= tag.taggings_count %>)
         </li>
     <% end %>
   </ul>
