--- a/app/views/textfiles/_form.html.erb
+++ b/app/views/textfiles/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@textfile) do |f| %>
-  <div class="center">
+  <div id="center">
     <p class="main_text">
       <%= f.label :name, "Filename" %><br>
       <%= f.text_field :name, class: "small_input_box" %><br>
