--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user) do |f| %>
-  <div class="center">
+  <div id="center">
     <p class="main_text">
       <% # I was planning to have a button that would open a "Choose folder" dialog, %>
       <% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
