Add mass tagging/untagging, minor navigation changes
Tags can be managed by selecting and deselecting associated txt files from a list of all txt files. Makes adding/removing tags from a lot of files much faster.
Seems like Coffeescript (and by extension, Javascript) is broken on Windows 64-bit computers, so that has to be fixed. For now, I'm using placeholder inline javascript. Tag management page to contain more bells and whistles after that gets fixed.

--- a/app/views/shared/_top.html.erb
+++ b/app/views/shared/_top.html.erb
@@ -1,14 +1,21 @@
 <% nav_items = Hash.new %>
 <% nav_items["Home"] = user_path(@user) %>
 <% nav_items["Preferences"] = edit_user_path(@user) %>
-<% nav_items["Edit File"] = edit_textfile_path(@textfile) if defined? edit and edit == true %>
+
+<% if defined? link %>
+  <% if link == "edit_textfile" %>
+    <% nav_items["Edit"] = edit_textfile_path(@textfile) %>
+  <% elsif link == "edit_tag" %>
+    <% nav_items["Manage"] = mass_edit_tag_path(@tag) %>
+  <% end %>
+<% end %>
 
 <div id="header"><h1><%= title %></h1></div>
 
 <div id="navigation">
   <ul class="nav_link">
     <% nav_items.each do |name, link| %>
-      <% if name == "Edit File" %>
+      <% if name == "Edit" or name == "Manage" %>
         <li class="nav_link_right"><%= link_to(name, link) %></li>
       <% else %>
         <li class="nav_link"><%= link_to(name, link) %></li>
