--- a/app/views/textfiles/show.html.erb
+++ b/app/views/textfiles/show.html.erb
@@ -6,7 +6,7 @@
     "Ensure that the file is encoded in UTF-8."] %>
 <% end %>
 
-<%= render partial: "/shared/top", locals: {title: @textfile.name, edit: true} %>
+<%= render partial: "/shared/top", locals: {title: @textfile.name, link: "edit_textfile"} %>
 
 <div id="parent">
   <div id="left">
