--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Files Tagged with "<%= @tag.name %>"</h1>
-<h4><%= link_to("Return to all files", user_path(@user)) %></h4>
+<% title = "Files Tagged with #{@tag.name}" %>
+<%= render partial: "/shared/top", locals: {title: title, link: "edit_tag"} %>
 
 <div id="parent">
   <%= render partial: "/shared/textfile_feed", locals: {textfiles: @textfiles} %>
