--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<% title = "Files Tagged with #{@tag.name}" %>
+<% title = "Files Tagged with '#{@tag.name}'" %>
 <%= render partial: "/shared/top", locals: {title: title, link: "edit_tag"} %>
 
 <div id="parent">
