--- a/app/views/textfiles/_form.html.erb
+++ b/app/views/textfiles/_form.html.erb
@@ -13,7 +13,7 @@
       <%= f.text_area :contents, rows: 30, class: "large_input_box" %>
     </p>
     <p>
-      <%= f.submit "Save File", class: "button" %>
+      <%= f.submit "Save File", class: "submit_button" %>
     </p>
   </div>
 <% end %>
