--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,7 +9,7 @@
       Example: C:\windows\system32
     </p>
     <p>
-      <%= f.submit "Save Preferences", class: "button" %>
+      <%= f.submit "Save Preferences", class: "submit_button" %>
     </p>
   </div>
 <% end %>
