--- a/app/views/tags/mass_edit.html.erb
+++ b/app/views/tags/mass_edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Manage Files Tagged with <%= @tag.name %></h1>
-
+<% title = "Manage Files Tagged with '#{@tag.name}'" %>
+<%= render partial: "/shared/top", locals: {title: title, link: "toggle_all_previews"} %>
 <%= render partial: 'form' %>
