--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
-div.alert{
+div#alert{
   margin-left: auto;
   margin-right: auto;
   background-color: grey;
