--- a/app/views/shared/_tags.html.erb
+++ b/app/views/shared/_tags.html.erb
@@ -3,7 +3,7 @@
   <ul>
     <% tags.each do |tag| %>
         <li class="main_text">
-          <%= link_to(tag.name, tag_path(tag)) %> (<%= tag.taggings_count %>)
+          <%= link_to(tag.name.titleize, tag_path(tag)) %> (<%= tag.taggings_count %>)
         </li>
     <% end %>
   </ul>
