--- a/app/views/shared/_top.html.erb
+++ b/app/views/shared/_top.html.erb
@@ -1,35 +1,21 @@
-<% nav_items = Hash.new %>
-<% nav_items["Home"] = user_path(@user) %>
-<% nav_items["Preferences"] = edit_user_path(@user) %>
-
-<% if defined? link %>
-  <% if link == "edit_textfile" %>
-    <% nav_items["Edit"] = edit_textfile_path(@textfile) %>
-  <% elsif link == "edit_tag" %>
-    <% nav_items["Manage"] = mass_edit_tag_path(@tag) %>
-  <% end %>
-<% end %>
+<% nav_items = [] %>
+<% nav_items << link_to("Home", user_path(@user)) %>
+<% nav_items << link_to("Preferences", edit_user_path(@user)) %>
 
 <div id="header_container">
   <div id="header">
     <h1><%= title %></h1>
   </div>
-  <div id="header-2">
-    <% if defined? link and link == "toggle_all_previews" %>
-      <button type="button" id="toggle_all_previews_button">
-        Toggle All Previews
-      </button>
-    <% end %>
-  </div>
 </div>
 
 <div id="navigation">
   <ul class="nav_link">
-    <% nav_items.each do |name, link| %>
-      <% if name == "Edit" or name == "Manage" %>
-        <li class="nav_link_right"><%= link_to(name, link) %></li>
-      <% else %>
-        <li class="nav_link"><%= link_to(name, link) %></li>
+    <% nav_items.each do |link| %>
+      <li class="nav_link"><%= link %></li>
+    <% end %>
+    <% if defined? extra_nav_items %>
+      <% extra_nav_items.each do |link| %>
+        <li class="nav_link_right"><%= link %></li>
       <% end %>
     <% end %>
   </ul>
