--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_tag(url_for(:controller => "tags", :action => "do_mass_edit"), :method => "post") do |f| %>
+<%= form_tag(url_for(:controller => "tags", :action => "update"), :method => "post") do |f| %>
   <div id="center">
     <ul><% @textfiles.each do |tf| %>
       <li class="main_text">
         <% checked = tf.tag_list.include? @tag.name %>
         <h2>
-          <%= check_box_tag(tf.id, 1, checked, class: "checkbox") %>
-          <%= label_tag(tf.id, tf.name) %>
+          <%= check_box_tag tf.id, 1, checked, class: "checkbox" %>
+          <%= label_tag tf.id, tf.name %>
           <button type="button" class="toggle_preview_button <%= tf.id %>">
             Toggle Preview
           </button>
