--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,5 +1,9 @@
-<% title = "Files Tagged with '#{@tag.name}'" %>
-<%= render partial: "/shared/top", locals: {title: title, link: "edit_tag"} %>
+<% title = "Files Tagged with '#{@tag.name.titleize}'" %>
+
+<% extra_nav_items = [] %>
+<% extra_nav_items << link_to("Manage Tag", edit_tag_path(@tag)) %>
+
+<%= render partial: "/shared/top", locals: {title: title, extra_nav_items: extra_nav_items} %>
 
 <div id="parent">
   <%= render partial: "/shared/textfile_feed", locals: {textfiles: @textfiles} %>
