Add fancy CSS stuff
Features:
- Navigation bar remains at top of window while scrolling
- Button to return to top of page
- Preferences open up in popup
- Initial app startup's landing page changed
- Changed background colors; I'm terrible at color design so I can't seem to settle on something that looks nice
- Some strings changed

Code:
- Reorganized CSS and JS; application.css and application.js now empty
- Changed some class/ID names

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#new_user_background{
+  width: 110%;
+  height: 110%;
+  position: fixed;
+  top: 0px;
+  left: -20px;
+}
+
+span#new_user_background_contents{
+  font-family: Permanent Marker;
+  font-size: 28px;
+}
