--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -1,4 +1,4 @@
-<% title = "Create Tag" %>
+<% title = "Create a New Tag" %>
 
 <% extra_nav_items = [] %>
 <% extra_nav_items << link_to("Toggle All Previews", "#", {id: "toggle_all_previews_button"}) %>
