--- a/app/views/shared/_top.html.erb
+++ b/app/views/shared/_top.html.erb
@@ -1,12 +1,15 @@
 <% nav_items = [] %>
 <% nav_items << link_to("Home", user_path(@user)) %>
-<% nav_items << link_to("Preferences", edit_user_path(@user)) %>
+<% nav_items << link_to("Preferences", "#", id: "preferences_link", class: "popup_link") %>
 
 <div id="header_container">
   <div id="header">
     <h1><%= title %></h1>
   </div>
 </div>
+
+<% # For scroll detection %>
+<div id="navigation_anchor"></div>
 
 <div id="navigation">
   <ul class="nav_link">
@@ -20,3 +23,5 @@
     <% end %>
   </ul>
 </div>
+
+<%= render template: "users/edit"  %>
