--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,20 @@
-<%= form_for(@user) do |f| %>
-  <div id="center">
-    <p class="main_text">
-      <% # I was planning to have a button that would open a "Choose folder" dialog, %>
-      <% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
-      <% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
-      <%= f.label :home, "Location of Files" %><br>
-      <%= f.text_field :home, class: "small_input_box" %><br><br>
-      Example: C:\windows\system32
-    </p>
-    <p>
-      <%= f.submit "Save Preferences", class: "submit_button" %>
-    </p>
-  </div>
-<% end %>
+<div id="preferences_wrapper" class="<%= wrapper_class %>">
+  <%= form_for(@user) do |f| %>
+    <div id="preferences_popup" class="<%= popup_class %>">
+      <% unless popup_class.include? "forced" %>
+        <a class="close_button" href="#">X</a>
+      <% end %>
+      <p class="main_text">
+        <% # I was planning to have a button that would open a "Choose folder" dialog, %>
+        <% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
+        <% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
+        <%= f.label :home, "Location of Files" %><br>
+        <%= f.text_field :home, class: "small_input_box" %><br><br>
+        Example: C:\windows\system32
+      </p>
+      <p>
+        <%= f.submit "Save Preferences", class: "submit_button" %>
+      </p>
+    </div>
+  <% end %>
+</div>
