--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <% # The set href prevents page from automatically moving to top %>
     <% # => since that's already handled by a JS function in application.css. %>
     <% # <a> used instead of <p> so that mouse changes on mouseover %>
-    <% unless @creating_user %>
+    <% unless @no_scroll %>
       <a href="#" id="link_to_top">Return to Top</a>
     <% end %>
   </body>
