Add basic BBCode support, alternate formatting style groundwork, bug fixes
Textfiles will display bold, italics, underline, and strikethrough styles if the appropriate bbcode exists in the file contents.
Two formatting styles implemented backend: WYSIWYG (show is similar to form data in edit) and an alternate style (newlines seperate paragraphs, empty lines ignored). Option to switch between them to be added.
Fixed a bug where on the home page, "Read more" would show underneath a Textfile even if there was an error displaying the file contents.

--- a/app/views/shared/_text_preview.html.erb
+++ b/app/views/shared/_text_preview.html.erb
@@ -1,8 +1,8 @@
 <% snip = StringConstructor.new.snippet(textfile.contents) %>
 
 <% snip.split("\n").each do |line| %>
-  <%= line %><br>
+  <%= raw line %><br>
 <% end %>
-<% unless snip == textfile.contents %>
+<% unless snip == textfile.contents or snip.downcase.include? "error" %>
   <%= link_to("Read more", textfile_path(textfile)) %>
 <% end %>
