Add Textfile display mode switching, bug fixes; optimization, code cleanup
Under Preferences, the display mode of txt files can be changed. Can also be set on first startup of app (i.e. creating new user).

Fixes:
- Fixed bug where clicking submit in Preferences popup would always return user to home page.
- Replaced deprecated "redirect :back" with "redirect_back".
- Removed line partial (used by Textfile show) because it really slows down loadup of the view. The show view's code looks less organized now, but oh well.
- Modified JS function to not watch Preference popup's submit button's clicks because it interferes with ability to save User data. I don't even remember why I set it to watch in the first place.
- Removed some unused CSS selectors I noticed.
- Quickfix for popup close button being too low in the div. I just noticed it, and I don't know how long it's been like that.
- Modified text styles in Preference popup.

--- a/app/assets/stylesheets/shared/popups.scss
+++ b/app/assets/stylesheets/shared/popups.scss
@@ -44,6 +44,7 @@
   position: absolute;
   right: 0;
   margin-right: 5px;
+  margin-top: -5px; // Don't know why I need this all of the sudden
 }
 
 .popup_page{
