--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,13 +4,20 @@
       <% unless popup_class.include? "forced" %>
         <a class="close_button" href="#">X</a>
       <% end %>
+      <% # I was planning to have a button that would open a "Choose folder" dialog, %>
+      <% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
+      <% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
+      <h3><%= f.label :home, "Location of Files" %></h3>
       <p class="main_text">
-        <% # I was planning to have a button that would open a "Choose folder" dialog, %>
-        <% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
-        <% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
-        <%= f.label :home, "Location of Files" %><br>
-        <%= f.text_field :home, class: "small_input_box" %><br><br>
-        Example: C:\windows\system32
+        <%= f.text_field :home, class: "small_input_box" %><br>
+        <span class="minor_text">Example: C:\windows\system32</span>
+      </p>
+        <h3>Display Mode for .txt Files</h3>
+      <p class="main_text">
+        <%= f.radio_button :textfile_display_mode, "wysiwyg"%>
+        <%= f.label :textfile_display_mode, "WYSIWYG", value: "wysiwyg" %>
+        <%= f.radio_button :textfile_display_mode, "alternative" %>
+        <%= f.label :textfile_display_mode, "Alternative", value: "alternative" %>
       </p>
       <p>
         <%= f.submit "Save Preferences", class: "submit_button" %>
