Add Textfile moving, fixes
In edit view, the file's location relative to the home folder can be set. Upon saving, the file will deleted and a new file with the updated name/contents/location will be created.
Changed the StringConstructor#parent_directory method to work less hack-ish-ly. It should also work 100% of the time, regardless of what you throw at it. Plus it's shorter.
Also fixed some code style inconsistencies, and the popup close button looking weird, again.

--- a/app/assets/stylesheets/shared/general.scss
+++ b/app/assets/stylesheets/shared/general.scss
@@ -66,11 +66,11 @@ a#link_to_top{
 }
 
 h2, h3, .main_text, .minor_text, .small_input_box, .large_input_box,
-.submit_button, .nav_link{
+.submit_button, .nav_link, .partial_input_box{
   font-family: 'Raleway', sans-serif;
 }
 
-.main_text, .small_input_box, .large_input_box, .nav_link{
+.main_text, .small_input_box, .large_input_box, .nav_link, .partial_input_box{
   font-size: 18px;
 }
 
@@ -86,6 +86,10 @@ h2, h3, .main_text, .minor_text, .small_input_box, .large_input_box,
 .large_input_box{
   width: 100%;
   resize: none;
+}
+
+.partial_input_box{
+  width: 30%;
 }
 
 .submit_button{
