--- a/app/views/textfiles/_form.html.erb
+++ b/app/views/textfiles/_form.html.erb
@@ -9,11 +9,13 @@
       <%= f.text_field :tag_list, value: f.object.tag_list.to_s, class: "small_input_box" %><br>
     </p>
     <p class="main_text">
+      <%= f.label "location_partial", "Directory" %><br>
+      <%= @user.home + "\\" %>
+      <%= f.text_field "location_partial", value: @relative_dir, class: "partial_input_box" %><br>
+    <p class="main_text">
       <%= f.label :contents, "File Contents" %><br>
       <%= f.text_area :contents, rows: 30, class: "large_input_box" %>
     </p>
-    <p>
-      <%= f.submit "Save File", class: "submit_button" %>
-    </p>
+    <p><%= f.submit "Save File", class: "submit_button" %></p>
   </div>
 <% end %>
